--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ BASE STYLES
 
 @layer base {
   body {
-    @apply min-h-screen dark:bg-gray-800 bg-white;
+    @apply min-h-screen bg-white;
   }
 }
 /* Reset */
@@ -29,7 +29,7 @@ BASE STYLES
   h5,
   h6 {
     @apply font-bold tracking-tight mb-2
-    text-gray-600 dark:text-white
+    text-gray-600
     transition-all duration-150 ease-in-out;
   }
   h1 {
@@ -52,7 +52,7 @@ BASE STYLES
   }
   p {
     @apply text-base mb-4 leading-relaxed
-    text-gray-550 dark:text-gray-300;
+    text-gray-550;
   }
   a {
     @apply text-primary-main font-semibold;
@@ -68,7 +68,7 @@ BASE STYLES
 /* Page Wrapper */
 @layer base {
   .wrapper {
-    @apply min-h-screen flex flex-col bg-primary-100 dark:bg-gray-800
+    @apply min-h-screen flex flex-col bg-primary-100
     transition-all duration-150 ease-in-out;
   }
 }
@@ -77,7 +77,7 @@ BASE STYLES
 @layer components {
   .content-box {
     @apply bg-white border border-primary-100
-    dark:bg-gray-700 dark:border-gray-600 rounded-xl
+    rounded-xl
     transition-all duration-150 ease-in-out;
   }
 }
@@ -98,7 +98,6 @@ NAVIGATION
   .h-nav {
     @apply inline-flex items-center
     text-gray-500 hover:text-gray-800
-    dark:hover:text-white
     transition-all duration-150 ease-in-out;
   }
 }
@@ -146,8 +145,8 @@ BUTTON COLOR STYLINGS
 /* Standard Buttons */
 @layer components {
   .btn-gray-outline {
-    @apply border-2 border-gray-600 text-gray-600 dark:border-gray-500 dark:text-gray-400
-    opacity-100 hover:bg-gray-600 dark:hover:bg-gray-500 hover:text-white dark:hover:text-white
+    @apply border-2 border-gray-600 text-gray-600 
+    opacity-100 hover:bg-gray-600 hover:text-white
         transition-all duration-150 ease-in-out focus:outline-none;
   }
 }
